repo/manifests/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: www
    hasuraService: custom
  name: www
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: www
  type: LoadBalancer
status:
  loadBalancer: {}
