repo/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  ports:
    - port: 80
      targetPort: 3200
      protocol: TCP
  type: NodePort
  selector:
    app: nginx
